Remaining controllers, User entity, FluentValidation, Logging, Exception Handling, Remaining services, Token logic

--- a/TodoListApp.WebApi/appsettings.json
+++ b/TodoListApp.WebApi/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "TodoListConnection": "Server=localhost\\MSSQLLOCALDB;Database=TodoListDB;MultipleActiveResultSets=true;User Id=sa;Password=password1",
     "TodoListUserConnection": "Server=localhost\\MSSQLLOCALDB;Database=TodoListUserDB;MultipleActiveResultSets=true;User Id=sa;Password=password1"
+  },
+  "JwtSettings": {
+    "Issuer": "TodoAppServer",
+    "Audience": "TodoAppClient",
+    "SecretKey": "CaP[rdLJT[Z2-7xc$fEcyERR*xhU{HDJ:TKM[%jg+%dra]PPRCn-R:M7V%]n{jKEZ1D$TS}eVCmPaYqZuuxnvfvi9"
   }
 }
