--- a/TodoListApp.WebApp/appsettings.json
+++ b/TodoListApp.WebApp/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiPath": "https://localhost:7177/"
 }
